# PraticalWorkThesis

./: README.md
App-tese/: ciphertext.txt  encrypted_session_key.txt
App-tese/Kyber/: cli.py  dilithium.py  main.py  pyproject.toml  tasks.py
App-tese/Kyber/kyber/: ccakem.py  constants.py
App-tese/Kyber/kyber/encryption/: __init__.py  decrypt.py  encrypt.py  keygen.py
App-tese/Kyber/kyber/entities/: polring.py
App-tese/Kyber/kyber/utils/: byte_conversion.py  cbd.py  compression.py  encoding.py  parse.py  pseudo_random.py  round.py
App-tese/Kyber/v02_app/: DecMessage.py  DecSessionKey.py  Docs.py  Kyber.py  Old.py  Package.py  Sign.py  hash.py
App-tese/Kyber/v02_app/Publickeys/: public_key_receptor.pem  public_key_sender.pem
App-tese/Kyber/v02_app/Receptor/Receptor_Keys/: Receptorkeys.py  private_key_receptor.pem
App-tese/Kyber/v02_app/Sender/Sender_Keys/: SenderKeys.py  private_key_sender.pem
